# ludwig-world

./: .gitignore  CMakeLists.txt  README.md  includes.hpp  main.cpp
entities/: chunk.cpp  chunk.hpp  entities.cpp  entities.hpp  entity.cpp  entity.hpp  map.cpp  map.hpp  tile.cpp  tile.hpp
src/: includes.hpp  main.cpp  setup.hpp
src/components/ai/: pathComponent.hpp  pathfindingComponent.hpp  seekEntityComponent.hpp
src/components/combat/: hasCombatantComponent.hpp  livingComponent.hpp
src/components/general/: cameraComponent.hpp  experienceComponent.hpp
src/components/movement/: collisionComponent.hpp  hasCollision.hpp  hasLocation.hpp  hasTransform.hpp  locationComponent.hpp  rotationComponent.hpp  velocityComponent.hpp
src/components/player/: controllerComponent.hpp  hasNameComponent.hpp  playerComponent.hpp
src/components/render/: hasPhycisComponent.hpp  isRenderedComponent.hpp  soundComponent.hpp
src/entities/: entities.cpp  entities.hpp  entity.cpp  entity.hpp  types.hpp
src/helper/: blocks.hpp  color.hpp  font.cpp  font.hpp  hitBox.hpp  includeComponents.hpp  includes.hpp  math.cpp  math.hpp  setup.hpp  sprites.cpp  sprites.hpp  textures.hpp  typedef.hpp
src/helper/createEntities/: attack.cpp  attack.hpp  mobs.cpp  mobs.hpp
src/helper/math/: hitBox.hpp  math.cpp
src/helper/pathfinding/: pathfinding.cpp  pathfinding.hpp
src/systems/: systemManager.cpp  systemManager.hpp
src/window/: window.cpp  window.hpp
src/world/: chunk.cpp  chunk.hpp  game.cpp  game.hpp  map.cpp  map.hpp  tile.cpp  tile.hpp  world.cpp  world.hpp
(+33 files in other folders)
